--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.0'
 
+    implementation 'com.google.code.gson:gson:2.8.2'
+
 
 
 
